--- a/css/style.css
+++ b/css/style.css
@@ -133,11 +133,12 @@ header {
 }
 
 .hero-section {
-    padding: 15px;
+    padding: 5rem 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    height: 60vh;
 }
 
 .hero-section h1 {
@@ -150,7 +151,7 @@ header {
 }
 
 .hero-section .hero-img img {
-    width: 45%;
+    width: 100%;
 }
 
 .hero-section .hero-text {
