--- a/css/responsive.css
+++ b/css/responsive.css
@@ -50,6 +50,9 @@
 }
 
 @media only screen and (max-width:980px) {
+    section {
+        padding: 3rem;
+    }
     .span_1_of_4 {
         width: 49.2%;
     }
@@ -66,6 +69,9 @@
 }
 
 @media only screen and (max-width:768px) {
+    section {
+        padding: 3rem;
+    }
     .little-description {
         width: 100%;
         margin-left: 0;
@@ -109,9 +115,26 @@
     .b-item {
         /* height: 200px; */
     }
+    .youtube-link iframe {
+        height: 200px !important;
+        width: 100%;
+    }
+    .g-div div {
+        width: 49%;
+    }
+    .g-div .height {
+        width: 100% !important;
+        height: 200px;
+    }
+    .inner p {
+        padding: 0 2rem;
+    }
 }
 
 @media only screen and (max-width:480px) {
+    section {
+        padding: 1rem;
+    }
     header {
         /* height: 85vh; */
     }
@@ -137,5 +160,12 @@
     }
     .habitant img {
         width: 100%;
+    }
+    .g-div div {
+        width: 100%;
+    }
+    .g-div .height {
+        width: 100%;
+        height: 200px;
     }
 }
