--- a/css/style.css
+++ b/css/style.css
@@ -730,3 +730,92 @@ svg.ui-ux circle {
     /* width: calc((100% - 20px) / 2); */
     filter: brightness(100%);
 }
+
+.contact-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-img {
+    width: 30%;
+    padding: 1rem;
+}
+
+.contact-img img {
+    width: 100%;
+    /* height: 47vh; */
+    object-fit: cover;
+}
+
+.contact-table {
+    width: 70%;
+    padding: 1rem;
+    /* color: black; */
+    /* flex: 1; */
+}
+
+.contact-table h2 {
+    color: black;
+    margin: 0;
+    /* flex: 1; */
+}
+
+.contact-table table {
+    width: 100%;
+    font-size: 2.5rem;
+    /* border-collapse: collapse; */
+    margin-bottom: 20px;
+}
+
+.contact-table table,
+.contact-table th,
+.contact-table td {
+    border: 1px solid black;
+}
+
+.contact-table tr {
+    line-height: 4rem;
+}
+
+.contact-table tr td:nth-child(1) {
+    font-weight: bold;
+}
+
+.contact-table td {
+    padding: .5rem
+}
+
+.buttons {
+    margin-top: 3rem;
+    text-align: center;
+}
+
+.buttons button {
+    font-size: 2rem;
+    /* text-decoration: none; */
+    font-weight: 600;
+    padding: 8px 10px;
+    margin-left: 2rem;
+    border: none;
+    border-radius: 5px;
+}
+
+.buttons button:first-child {
+    background-color: #f0d434;
+}
+
+.buttons button:nth-child(2) {
+    background-color: #348cf0;
+    color: white;
+}
+
+.contact-div hr {
+    color: #273a71;
+}
+
+#pdfContent.centered {
+    margin: 5rem auto;
+    /* margin-top: ; */
+    border: 1px solid black;
+}
