image added in pdf

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -130,7 +130,7 @@
         padding: 0 2rem;
     }
     .contact-div {
-        flex-direction: column;
+        /* flex-direction: column; */
     }
     .contact-img {
         width: 100%;
