--- a/css/style.css
+++ b/css/style.css
@@ -732,24 +732,26 @@ svg.ui-ux circle {
 }
 
 .contact-div {
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
 .contact-img {
-    width: 30%;
+    /* flex: 1; */
     padding: 1rem;
+    text-align: center;
+    margin-top: 2rem;
 }
 
 .contact-img img {
-    width: 100%;
+    /* width: 100%; */
     /* height: 47vh; */
     object-fit: cover;
 }
 
 .contact-table {
-    width: 70%;
+    /* width: 70%; */
     padding: 1rem;
     /* color: black; */
     /* flex: 1; */
@@ -810,12 +812,33 @@ svg.ui-ux circle {
     color: white;
 }
 
+.mail-link {
+    text-decoration: none;
+}
+
 .contact-div hr {
     color: #273a71;
 }
 
-#pdfContent.centered {
-    margin: 5rem auto;
-    /* margin-top: ; */
-    border: 1px solid black;
+.centered {
+    height: 100vh;
+    /* margin: 5rem auto; */
+    margin-top: 4rem;
+    /* border: 1px solid black; */
+}
+
+#hiddenImage {
+    display: none;
+}
+
+.show-img {
+    display: block !important;
+    width: 150px;
+    height: 100px;
+    margin: auto;
+    /* padding-bottom: 4rem; */
+}
+
+.hide-img {
+    display: none !important;
 }
